[package]
name = "test_libui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-timer = "3.0.2"
libui = "0.3.0"
serde = {version = "1.0" , features = ["derive"]}
serde_yaml = "0.8"
tokio ={ version =  "1.32.0", features = ["time"]}
